color options added

--- a/DOM-task/index.html
+++ b/DOM-task/index.html
@@ -8,10 +8,23 @@
 </head>
 
 <body id="bg-color">
+
+    
+    <label for="" id="label">Linear gradient colour options:</label>
+    <select id="color-options">
+        <option value=""></option>
+        <option value="to right">to right</option>
+        <option value="to left">to left</option>
+        <option value="to bottom">to bottom</option>
+        <option value="to top">to top</option>
+    </select>
+
+
+
     <input type="color" id="color">
     <input type="color" id="color1">
-    <button onclick="changecolor()">GO</button>
-   
+    <button onclick="changecolor()" id="btn">GO</button>
+
 
     <script src="js/script.js"></script>
 </body>
