--- a/DOM-Task1/index.html
+++ b/DOM-Task1/index.html
@@ -8,14 +8,20 @@
 </head>
 
 <body>
-    <h1 id="product-count">0</h1>
+    <nav id="nav-bar">
+        <h1 id="product-count">0</h1>
+        <img src="https://www.freeiconspng.com/uploads/cart-icon-14.png" alt="" id="icon">
 
-    <button onclick="addtocart()">Add to cart </button>
+    </nav>
+
+
+    <img src="http://127.0.0.1:5502/image/card-image/2.jpg" alt="" id="imgs">
+    <h2 id="flo">Flower</h2>
+    <button onclick="addtocart()" id="btn">Add to cart </button>
+
+
     <button onclick="addtocartdec()">Add to cart Decrement</button>
     <button onclick="restbtn()">rest </button>
-
-
-
 
     <script src="js/script.js"></script>
 </body>
