JavaScript Files Added

--- a/string/index.html
+++ b/string/index.html
@@ -20,8 +20,12 @@
 
         //string Interpolation
         let name = "Kiruthika";
-        let msg = 'you are learning from ${name}';
+        let msg = `you are learning from ${name}`;
         console.log(msg)
+
+        let name1 = "Deepak";
+        let msg1 = `You are learning from ${name1}`;
+        console.log(msg1);
 
         //length of String
         let len = name.length
@@ -100,7 +104,6 @@
         console.log(num.split(","));
         console.log(num.split(""));
         console.log(num.split(" "));
-
     </script>
 </body>
 
