--- a/string/task.html
+++ b/string/task.html
@@ -40,7 +40,7 @@
                 // debugger;
                 let ch = text[i];
 
-                let upper = ch.match(/[A-Z]/g);
+                let upper = ch.match(/[A-Z]/);
                 // let lower = ch.match(/[a-z]/g);
 
                 if (ch == upper) {
